# tent-pole

./: README.md  local-install.sh  pyproject.toml  tent-pole.py
tent_pole/: config.py  course.py  file.py  main.py  module.py  page.py
tests/: test_tent_pole.py
