[tool.poetry]
name = "tent-pole"
version = "0.1.0"
description = ""
authors = ["Phillip Lord"]

[tool.poetry.dependencies]
python = "^3.6"
canvasapi = "^2.0.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
